🎉auto update by Gmeek action

--- a/backup/资本论序言.md
+++ b/backup/资本论序言.md
@@ -1,3 +1,7 @@
   “分析经济形势，既不能用显微镜，也不能用化学试剂。二者都必须用抽象力表达。”
    本书研究重点：资本主义生产方式以及和它相适应的生产关系和交换关系。
    本书最终目的：揭示现代社会的经济运动规律。
+   资本论第一卷：研究资产的生产过程。
+   第二卷：研究资本的流通过程。
+   第三卷：研究资本主义生产的总过程。
+   逻辑：第一卷系统的阐述了劳动价值理论和剩余价值理论，揭示了资本主义积累的一般规律，指出资本积累的发展必然导致资本主义内在矛盾的加深与无产阶级和资产阶级之间的矛盾激化，最后导致资本主义制度走向灭亡。
